@@ -1,3 +1,5 @@
+19122801 - Added X10 / X100 output smoothing
+		 - Added single-step
 19122703 - #1 Speed scaling added to code
 		 - #2 Direction artifacts
 19122702 - Decode function completed
